<resources>
    <string name="app_name">ClockT</string>
    <string name="divide_time">:</string>
    <string name="start">开 始</string>
    <string name="pause">暂 停</string>
    <string name="resume">继 续</string>
    <string name="reset">重 置</string>
    <string name="init">00</string>
    <string name="zero">00</string>
    <string name="colon">:</string>
    <string name="record">记 录</string>
    <string name="dot">.</string>
    <string name="zeros">00</string>
    <string name="add">添 加</string>
    <string name="clock">闹钟</string>
    <string name="time">时间</string>
    <string name="timer">计时器</string>
    <string name="stop_watch">秒表</string>
    <string name="close_clock">关闭闹钟</string>
    <string name="delay_sleep">再睡十分</string>
</resources>
