<?xml version="1.0" encoding="utf-8"?>
<com.glazbeni.org.clockt.Layout.StopWatchView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="bottom|right"
            android:text="@string/zero"
            android:textColor="@color/colorLv"
            android:textSize="70sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tv_d2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/colorLv"
            android:textSize="70sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tv_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zeros"
            android:textColor="@color/colorLv"
            android:textSize="70sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tv_d3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="@color/colorLv"
            android:textSize="35sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tv_mSec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="bottom|left"
            android:text="@string/zeros"
            android:textColor="@color/colorLv"
            android:textSize="35sp"
            android:typeface="monospace" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_stopwatch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:divider="@null" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sw_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/start"
            android:textColor="@color/colorLv" />

        <Button
            android:id="@+id/btn_sw_record"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/record"
            android:textColor="@color/colorLv"
            android:visibility="gone" />
    </LinearLayout>

</com.glazbeni.org.clockt.Layout.StopWatchView>