<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.glazbeni.org.clockt.Activity.MainActivity">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorBG">

            <TextView
                android:id="@+id/tv_alarm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/clock"
                android:textColor="@color/colorAuto"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/colorAuto"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timer"
                android:textColor="@color/colorAuto"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_stopwatch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stop_watch"
                android:textColor="@color/colorAuto"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2.7dp"
            android:background="@color/colorAuto"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_line"
                android:layout_width="95dp"
                android:layout_height="2.7dp"
                android:scaleType="matrix"
                android:src="@color/colorFAB" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_clock"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorBG"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />

</LinearLayout>

