<?xml version="1.0" encoding="utf-8"?>
<com.glazbeni.org.clockt.Layout.TimerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="160dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:inputType="number"
            android:lines="1"
            android:maxLength="2"
            android:text="@string/zero"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorLv"
            android:textSize="50sp"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_time"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorLv"
            android:textSize="50sp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/et_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:inputType="number"
            android:lines="1"
            android:maxLength="2"
            android:text="@string/zero"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorLv"
            android:textSize="50sp"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_time"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorLv"
            android:textSize="50sp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/et_sec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:inputType="number"
            android:lines="1"
            android:maxLength="2"
            android:text="@string/zero"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorLv"
            android:textSize="50sp"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/start"
            android:elevation="8dp"
            android:textColor="@color/colorLv" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/reset"
            android:elevation="8dp"
            android:textColor="@color/colorLv" />

    </LinearLayout>

</com.glazbeni.org.clockt.Layout.TimerView>